--- a/client/package.json
+++ b/client/package.json
@@ -7,11 +7,15 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.9",
+    "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.2.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.3",
+    "redux": "^5.0.1",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
